[package]
name = "crypter"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10.41", features = ["vendored"], optional = true }
paste = { version = "1.0.7", optional = true }

[dev-dependencies]
anyhow = "1.0.58"
rand = "0.8.5"

[features]
openssl = ["dep:openssl", "dep:paste"]
